--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="static/js/bootstrap.js"></script>
     <script type="text/javascript" src="static/js/module.js"></script>
     <script type="text/javascript" src="static/js/uploader.js"></script>
-    <script type="text/javascript" src="static/js/simditor.js"></script>
+    <script type="text/javascript" src="static/js/simditor-all.js"></script>
 
 
     <title>{{ title }}</title>
@@ -38,7 +38,7 @@
     <script>
         var editor = new Simditor({
             textarea: $('#editor'),
-            toolbar: ['emoji','title', 'bold', 'italic', 'underline', 'color', '|', 'ol', 'blockquote', 'code', '|', 'link', 'image', '|'],
+            toolbar: ['title', 'bold', 'italic', 'underline', 'color', '|', 'ol', 'blockquote', 'code', '|', 'link', 'image', '|'],
             emoji: {
                 imagePath: '/static/images/emoji/'
             },
